# binance_ai_trader

./: .env.example  .gitignore  .pre-commit-config.yaml  ADAPTIVE_LEARNING_IMPLEMENTATION.md  ADAPTIVE_SYSTEM_GUIDE.md  ARCHITECTURAL_BOUNDARIES.md  ARCHITECTURE_CLEANUP_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DECISION_ENGINE_README.md  HOW_TO_CREATE_PR.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_JOB_RETRY.md  IMPLEMENTATION_COMPLETE_PRODUCTION_SAFETY.md  IMPLEMENTATION_COMPLETE_SAFE_JOB_RETRY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY_PRODUCTION_HARDENING.md  IMPORT_DEPENDENCY_REPORT.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  PRODUCTION_SAFETY_FINAL_SUMMARY.md  PRODUCTION_SAFETY_IMPLEMENTATION.md  PR_DESCRIPTION.md  PR_DESCRIPTION_UKRAINIAN.md  PR_SUMMARY.md  README.md  README_DECISION_ENGINE.md  RELEASE_NOTE_PAPER_V1.md  RELEASE_PAPER_V1.md  RUNBOOK_PAPER_5M.md  SAFETY_GUARD_COVERAGE.md  TASK_COMPLETION_SUMMARY.md  VERIFICATION_TOOLING_SUMMARY.md  __init__.py  conftest.py  dev-requirements.txt  main.py  pyproject.toml  (+6 more)
adaptive/: DELIVERY_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  __init__.py  adaptive_controller.py  cli.py  drift_monitor.py  drift_monitor_simple.py  event_hooks.py  examples.py  feature_logger.py  ml_online.py  model_registry.py  online_trainer.py  pipeline.py  promotion_gate.py  promotion_gate_simple.py  shadow_model.py
adaptive_logs/: trades.parquet
adaptive_models/: shadow_1770428506.pkl
ai_backtest/: __init__.py  engine.py  meta_backtest.py  metrics.py
analytics/: leader_decay.py  trader_scoring.py  trader_stats.py
app/: .gitignore  main.py
backtest/: backtest_adaptive.py  engine.py  runner_5m.py  sanity_report.py  validators_5m.py
binance_ai_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ci/: check_paper_v1.sh
config/: config.yaml
copy_trader_analyzer/: entry_analyzer.py  leaderboard_fetcher.py  position_reader.py
core/: __init__.py  adaptive_engine.py  build_meta.py  config.py  copy_engine.py  decision_engine.py  dependencies.py  drift_detector.py  ensemble_engine.py  equity_tracker.py  exceptions.py  execution_adapter.py  execution_binance.py  execution_guard.py  execution_paper.py  exposure_manager.py  feature_builder.py  kill_switch.py  live_model.py  logger.py  logging.py  meta_engine.py  meta_tracker.py  portfolio_router.py  position_sizer.py  position_sync.py  probability_gate.py  regime_detector.py  regime_model_engine.py  risk_filter.py  risk_manager.py  risk_overlay.py  risk_scaler.py  trade_model.py
data/: .gitignore  bnb_1m.csv  btcusdt_5m.csv  btcusdt_5m_small.csv
data_pipeline/: binance_client.py  dataset_downloader.py  dataset_registry.py  funding_loader_5m.py  merge.py  normalization.py  oi_loader_5m.py  parquet_loader.py  pipeline.py  price_loader.py  price_loader_5m.py  registry.py  schema.py  sentiment_aggregation.py  sentiment_loader.py  validation.py  validators.py
decision/: __init__.py  hybrid_engine.py
docs/: AI_SIGNAL_PIPELINE.md  JOB_MANAGEMENT_API.md  JOB_MANAGEMENT_QUICK_START.md  JOB_RETRY_FLOW.txt  PRODUCTION_HARDENING_COMPLETE.md  SAFE_JOB_RETRY_SYSTEM.md  advanced_weighting_system.md  anti_hold_collapse_system.md  good_trade_reinforcement_system.md  paper_trading_evaluation.md  policy_correction_system.md
events/: __init__.py  trade_events.py
examples/: decision_engine_example.py
execution/: __init__.py  builder_5m.py  validators.py
execution_safety/: emergency_stop.py  execution_guards.py  post_trade_checks.py  pre_trade_checks.py
features/: copy_trader_stats.py  feature_builder.py  pipeline.py  pipeline_5m.py  technical.py  time_features.py  validators.py  volatility.py  volume.py
leaderboard/: __init__.py  validator.py
market/: live_fetcher.py  pipeline.py  regime_detector.py
model_registry/: registry.py
models/: README.md  classification_inference.py  gb_btc_5m.pkl  inference.py  model_RANGE.pkl  model_TREND.pkl  predictor.py  rf_btc_5m.pkl
monitoring/: alerts.py  drift_monitor_v2.py  events.py  metrics.py
mydata/: sentiment_2025_2026.parquet
paper_gate/: __init__.py  gate_5m.py
scripts/: create_sample_data.py  download_btc_5m.py  paper_live_monitor.py  plot_equity.py  retrain_if_drift.py  run_ai_backtest.py  run_ai_backtest_regime.py  run_meta_backtest.py  test_signal.py  (+1 more)
(+231 files in other folders)
