[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance_ai_trader"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "fastapi>=0.104",
  "uvicorn>=0.24",
  "textual>=0.60",
  "datasets>=2.18",
  "torch>=2.2",
  "tensorboard>=2.16",
  "streamlit>=1.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "mypy>=1.5.0",
  "ruff>=0.1.0",
  "pre-commit>=3.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "core",
  "core.*",
  "features",
  "features.*",
  "signals",
  "signals.*",
  "execution",
  "execution.*",
  "targets",
  "targets.*",
  "models",
  "models.*",
  "training",
  "training.*",
  "trading",
  "trading.*",
  "backtest",
  "backtest.*",
  "interfaces",
  "interfaces.*",
  "model_registry",
  "model_registry.*",
  "market",
  "market.*",
  "strategies",
  "strategies.*",
  "execution_safety",
  "execution_safety.*",
  "monitoring",
  "monitoring.*",
  "paper_gate",
  "paper_gate.*",
  "data_pipeline",
  "data_pipeline.*",
]
exclude = [
  "config",
  "ai_data",
  "logs",
  ".venv",
  "venv-linux",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["tests", "app/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=.",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*_test.py",
  ".venv/*",
  "venv-linux/*",
  "setup.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "pandas.*",
  "torch.*",
  "transformers.*",
  "datasets.*",
  "streamlit.*",
  "textual.*",
]
ignore_missing_imports = true
