[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance_ai_trader"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "fastapi>=0.104",
  "uvicorn>=0.24",
  "textual>=0.60",
  "datasets>=2.18",
  "torch>=2.2",
  "tensorboard>=2.16",
  "streamlit>=1.31",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "core",
  "core.*",
  "features",
  "features.*",
  "signals",
  "signals.*",
  "execution",
  "execution.*",
  "targets",
  "targets.*",
  "models",
  "models.*",
  "training",
  "training.*",
  "trading",
  "trading.*",
  "backtest",
  "backtest.*",
  "interfaces",
  "interfaces.*",
  "model_registry",
  "model_registry.*",
  "market",
  "market.*",
  "strategies",
  "strategies.*",
  "execution_safety",
  "execution_safety.*",
  "monitoring",
  "monitoring.*",
  "paper_gate",
  "paper_gate.*",
  "data_pipeline",
  "data_pipeline.*",
  "adaptive",
  "adaptive.*",
  "copy_trader_analyzer",
  "copy_trader_analyzer.*",
]
exclude = [
  "config",
  "ai_data",
  "logs",
  ".venv",
  "venv-linux",
]

[tool.ruff]
line-length = 100
